Name:                snappostgres
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snappostgres
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.11,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      >= 0.13  && < 0.14,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    text                      >= 0.11    && < 0.12,
    snaplet-postgresql-simple >= 0.4,
    postgresql-simple         >= 0.3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
